--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ marshmallow-sqlalchemy = "*"
 psycopg2-binary = "*"
 flask-bcrypt = "*"
 pyjwt = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.9"
