--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.0.5",
+    "bulma": "^0.9.2",
     "css-loader": "^3.5.3",
     "dotenv-webpack": "^4.0.0",
     "html-webpack-plugin": "^4.3.0",
@@ -28,8 +29,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-loader-spinner": "^4.0.0",
+    "react-notifications": "^1.7.2",
+    "react-router-dom": "^5.2.0",
+    "sass-import-modules": "^6.0.0"
   }
 }
