--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-loader-spinner": "^4.0.0",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.9.0",
     "sass-import-modules": "^6.0.0"
   }
 }
