--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-hook-form": "^6.15.5",
     "react-loader-spinner": "^4.0.0",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
